# qa-automation-portfolio

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
config/: main.env.example  questions.ini.example  students.ini.example
framework/: browser.py  config.py
framework/helpers/: text.py  waiters.py
framework/reporting/: allure_helpers.py  artifacts.py
framework/windows/: client.py
infrastructure/docs/: architecture.md  pipeline.md  vm-setup.md
infrastructure/gitlab-runner-service/: README.md  RunnerService.cs
infrastructure/pipeline/scripts/: resetvms.sh  snapshotvms.sh  stopvms.sh
tests/: conftest.py
tests/api/: conftest.py  test_student_data.py
tests/database/: conftest.py  test_schema.py
tests/desktop/: conftest.py  test_installation.py
tests/ui/: conftest.py  test_activation.py  test_admin_questions.py  test_lesson_flow.py  test_quiz.py  test_smoke.py
tests/ui/pages/: __init__.py  activation_page.py  base_page.py  dashboard_page.py  lesson_page.py  quiz_page.py
tests/ui/pages/admin/: __init__.py  login_page.py  questions_page.py  student_page.py
